syntax = "proto3";

import "google/protobuf/empty.proto";
import "test_string.proto";

service ServiceB {
  rpc ParseAndPass(TestString) returns (google.protobuf.Empty) {}
}
